# tibis

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
public/css/: cover.css
tibis/: tibis.py
tibis/lib/: args_parser.py  common.py  config.py  create.py  delete.py  first_time.py  list.py  lock.py  logger.py  static.py  unlock.py
